<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="@dimen/rover_explore_cardview_height"
    style="@style/CardView.Light"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="@dimen/default_cardview_elevation"
    android:layout_marginStart="@dimen/rover_explore_cardview_margin_start_end"
    android:layout_marginEnd="@dimen/rover_explore_cardview_margin_start_end"
    android:layout_marginTop="@dimen/rover_explore_cardview_margin_top_bottom"
    android:layout_marginBottom="@dimen/rover_explore_cardview_margin_top_bottom"
    app:cardCornerRadius="@dimen/default_cardview_corner_radius"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">



    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Setting generic content description. More detailed description will be set by Adapter-->
        <ImageView
            android:contentDescription="@string/rover_category_cd"
            android:id="@+id/rover_explore_cardview_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            android:background="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rover_explore_cardview_text"
            app:layout_constraintBottom_toBottomOf="parent"
            />



        <TextView
            android:id="@+id/rover_explore_cardview_text"
            style="@style/RoverExploreCardViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Pictures taken by this rover"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline_50_horizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />
        
        <android.support.constraint.Guideline
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/guideline_50_vertical"
            app:layout_constraintGuide_percent="0.50"/>
        

        <LinearLayout
            android:id="@+id/sol_search_button_bar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="@dimen/sol_search_button_bar_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rover_explore_cardview_text"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <Button
                android:id="@+id/search_sol_button"
                android:background="@drawable/rover_photo_buttons"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:elevation="2dp"
                android:layout_margin="@dimen/rover_explore_sol_search_button_padding"
                android:padding="@dimen/rover_explore_sol_search_button_padding"
                android:text="@string/enter_sol"/>

            <Button
                android:id="@+id/random_sol_button"
                android:background="@drawable/rover_photo_buttons"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@color/lightText"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:elevation="2dp"
                android:layout_margin="@dimen/rover_explore_sol_search_button_padding"
                android:padding="@dimen/rover_explore_sol_search_button_padding"
                android:text="@string/random_sol_button"/>

            <Button
                android:id="@+id/calendar_sol_button"
                android:background="@drawable/rover_photo_buttons"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@color/lightText"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:elevation="2dp"
                android:layout_margin="@dimen/rover_explore_sol_search_button_padding"
                android:padding="@dimen/rover_explore_sol_search_button_padding"
                android:text="@string/select_date"
                />


        </LinearLayout>




</android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>